# seqreg_tpp

./: .gitignore  CMakeLists.txt  README.md
PIXL/: CMakeLists.txt  package.xml
PIXL/launch/: pixl.launch
PIXL/parameters/: global.yaml
PIXL/src/: initial_pose.cpp  spawn.py
SeqSLAM_TPP/: CMakeLists.txt  package.xml
SeqSLAM_TPP/launch/: seqslam_tpp.launch
SeqSLAM_TPP/msg/: BoundingBox.msg
SeqSLAM_TPP/parameters/: global.yaml
SeqSLAM_TPP/src/: seqslam_tpp.cpp
SeqSLAM_TPP/srv/: MATLABSrv.srv  UserSelection.srv
baxter/apc_gripper_description/launch/: gripper_static_tf.launch
baxter/apc_gripper_description/urdf/: apc_suction_gripper.xacro
baxter/baxter_description/urdf/: baxter.urdf  baxter.urdf.xacro  left_end_effector.urdf.xacro
baxter/baxter_moveit_config/config/: baxter.srdf  kinematics.yaml  kinematics_position_only.yaml  kinematics_rotation_only.yaml  ompl_planning.yaml  stomp_planning.yaml
baxter/baxter_moveit_config/launch/: baxter_grippers.launch  baxter_moveit.launch  moveit.rviz
harvey_moveit/harvey_moveit_config/: CMakeLists.txt  package.xml
harvey_moveit/harvey_moveit_config/config/: controllers.yaml  kinect2_sensor (copy).yaml  kinect2_sensor.yaml  kinematics.yaml  ur5.srdf
harvey_moveit/harvey_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  harvey_moveit.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur5.launch  ur5_moveit.launch  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch  ur5_moveit_sensor_manager.launch.xml
harvey_moveit/harvey_moveit_config/scenes/: greenhouse.scene
harvey_moveit/ur_description/meshes/ur5/: gripper_cutter_collision.STL
harvey_moveit/ur_description/meshes/ur5/collision/: gripper_collision.dae  gripper_collision_2_force_torque.dae  gripper_cutter_collision.dae  harvey_collision.dae
harvey_moveit/ur_description/meshes/ur5/visual/: gripper.STL  gripper_cutter_visual.dae
harvey_moveit/ur_description/urdf/: gazebo.urdf.xacro  ur5.gazebo.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
matlab/: ImagePair.m  ImageRegistration.m  ImageRegistrationResult.m  NASApipeline.m  ResultsPublisher.m  SeqReg_TPP.m  bool2str.m  locnorm.m  parameters.mat  struct2optarg.m  test_cases.mat
matlab/caffe/: README.md  deploy_conv1.prototxt  deploy_conv1_3.prototxt
matlab/gpu/: Makefile  locnorm_gpu.cu  locnorm_gpu.ptx
matlab_gen/jar/: seqslam_tpp-0.0.0.md5
seqslam_tpp/: CMakeLists.txt  package.xml
seqslam_tpp/launch/: seqslam_tpp.launch
seqslam_tpp/parameters/: global.yaml
seqslam_tpp/src/: rec_bag.py  seqslam_tpp.cpp  test_node.py
seqslam_tpp/src/obsolete/: OBSOLETE_initial_pose.cpp
seqslam_tpp/srv/: UserSelection.srv
src/: initial_pose.cpp  other.cpp  rec_bag.py  spawn.py  temp
state_machine/: CMakeLists.txt  package.xml
state_machine/launch/: state_machine.launch  static_tf.launch  static_tf_base.launch
state_machine/parameters/: global.yaml
state_machine/scripts/: abortState.py  calcMovement.py  calcMovement_mod.py  calcScales.py  checkLimits.py  generatePose.py  getImage.py  getRobotPose.py  initData.py  moveRobotState.py  seqslamState.py  state_machine.py  toggleBinFillersAndTote.py  toggleData.py  userInputRequest.py
state_machine/state_machine/launch/: state_machine.launch
state_machine/state_machine/scripts/: generatePose.py  moveRobotToRelativePose.py  state_machine.py  toggleBinFillersAndTote.py  userInputRequest.py  waitState.py
user_input/: CMakeLists.txt  package.xml
user_input/launch/: user_input.launch
user_input/parameters/: global.yaml
user_input/src/: test_node.py  user_input.cpp
user_input/src/obsolete/: OBSOLETE_sim.cpp  rec_bag.py
user_input/srv/: MATLABSrv.srv  UserSelection.srv
